# monkey-kata

./: .gitignore  Makefile  README.md  STANDARDS.md  docker-compose.yml  package-lock.json  package.json  verify_backend.py
api/: Dockerfile  env.example  main.py  (+1 more)
backend/: .env.example  Dockerfile  env.example  main.py  pyproject.toml  requirements.txt
backend/demos/bedtime_story_generator/: README.md  router.py  service.py
backend/demos/competitor_analysis/: .env.example  README.md  __init__.py  agents.py  models.py  router.py  service.py
backend/demos/cv_analyzer/: router.py  service.py
backend/demos/document_qa_chatbot/: .env.example  README.md  document_utils.py  models.py  router.py  service.py
backend/demos/image_to_drawing/: .env.example  README.md  prompts.py  router.py  service.py
backend/demos/invoice_parser/: .env.example  README.md  router.py
backend/demos/job_application_form_filling/: README.md  __init__.py  form_agent.py  form_template.py  models.py  resume_parser.py  router.py  service.py
backend/demos/lead_scoring/: README.md  example.csv  lead_scoring_crews.py  models.py  router.py  service.py
backend/demos/legal_case_intake/: intake_agents.py  models.py  progress.py  router.py  service.py
backend/demos/medical_office_triage/: .env.example  models.py  prompt_utils.py  router.py  triage_agent.py
backend/demos/restaurant_booking/: .env.example  router.py
backend/demos/travel_support_assistant/: .env.example  README.md  mcp_server.py  router.py  service.py  tools.py  utils.py
backend/demos/website_rag/: README.md  models.py  rag_utils.py  router.py  service.py
backend/utils/: config.py  livekit_utils.py  llm_provider.py  thinking_callback.py
(+182 files in other folders)
