[project]
name = "backend"
version = "0.1.0"
description = "AI Engineering Demos - A collection of AI agentic patterns and demos"
readme = "README.md"
authors = [
    { name = "Param Harrison", email = "paramanantham@live.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "autogen-agentchat[openai]>=0.2.0",
    "autogen-ext[openai]>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.0",
    "crewai>=1.4.1",
    "ddgs>=0.1.0",
    "duckduckgo-search>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.104.1",
    "qdrant-client>=1.7.0",
    "google-generativeai>=0.8.0,<=0.8.5",
    "httpx>=0.25.2",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.37,<0.4.0",
    "langchain-google-genai>=2.0.10,<2.1.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langgraph>=0.2.40,<1.0.0",
    "litellm>=1.0.0",
    "livekit>=1.0.0",
    "livekit-agents[deepgram,openai,silero]~=1.2",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "openai>=1.3.0",
    "playwright>=1.40.0",
    "pydantic>=2.6.0",
    "pypdf>=4.0.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.24.0",
    "pymupdf4llm>=0.2.9",
    "mcp>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
